chore: sets allow extra params to JSON-RPC configuration
Improves the processing of the client name in a few places.

PR #284